<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/school"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="5dp"
            android:contentDescription="@string/pdf"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/first_second_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_second_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/patronymic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patronymic"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="bottom||end">

                <LinearLayout
                    android:layout_width="260dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/position"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/position_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/position_name"
                        android:textSize="14sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/favorites"
                    android:focusable="true"
                    app:srcCompat="@android:drawable/btn_star" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>